tests/ui/parser/trait-pub-assoc-const.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/trait-pub-assoc-const.rs:2:5
   |
LL |     pub const Foo: u32;
   |     ^^^
   |
   = note: trait items always share the visibility of their trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0449`.
